[gd_scene load_steps=7 format=3 uid="uid://cvku3xmbdrgyh"]

[ext_resource type="Script" path="res://Systems/Quest/UI/quest_giver_screen.gd" id="1_4ed16"]
[ext_resource type="FontFile" uid="uid://dk0lde2ju67sl" path="res://Assets/TinyUnicode.ttf" id="2_a2hif"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7rbh5"]
bg_color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7mscw"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0f27m"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3fcaj"]

[node name="QuestGiverScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_4ed16")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.705882)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_right = 160

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(480, 720)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7rbh5")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7mscw")

[node name="TitleLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_a2hif")
theme_override_font_sizes/font_size = 64
text = "Quest Title"
horizontal_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0f27m")

[node name="DescriptionLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_a2hif")
theme_override_font_sizes/font_size = 48
text = "Quest Description"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StageLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_a2hif")
theme_override_font_sizes/font_size = 48
text = "Stage Description"
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ObjectivesLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_a2hif")
theme_override_font_sizes/font_size = 48
text = "Objectives:"
autowrap_mode = 2

[node name="ObjectivesContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ColorRect" type="ColorRect" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="ColorRect2" type="ColorRect" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="ColorRect3" type="ColorRect" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="ColorRect4" type="ColorRect" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="AcceptButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_a2hif")
theme_override_font_sizes/font_size = 64
text = "Accept"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 160
theme_override_styles/separator = SubResource("StyleBoxEmpty_3fcaj")

[node name="DeclineButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_a2hif")
theme_override_font_sizes/font_size = 64
text = "Decline"
